--- a/.github/workflows/main_reactcs.yml
+++ b/.github/workflows/main_reactcs.yml
@@ -21,11 +21,10 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build
         run: |
           npm install
-          CI= npm run build --if-present
-          CI= npm run test --if-present
+          CI=false npm run build --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
